Fixed Zilla Slab bug on IOS

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -53,7 +53,7 @@
 /* ----------------- Animaciones -----------------*/
 .animatedText {
     letter-spacing: 0;
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     font-weight: 600;
     font-size: 1.5rem;
     text-align: left;
@@ -113,11 +113,9 @@
     font-size: 2rem;
 }
 
-.zilla {
-    font-family: "Zilla Slab";
-    font-weight: 200;
-}
 
+/* ----------------- Fonts----------------- */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Zilla+Slab&display=swap');
 
 /* ----------------- ETC ----------------- */
 .fixedP {
@@ -179,7 +177,7 @@
 a {
     text-decoration: none;
     font-weight: 500;
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
 }
 
 a:hover,
@@ -219,7 +217,7 @@ a img {
     border-radius: 4px;
     padding: 4px 16px;
     margin: 0 0 20px;
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     background-color: #FF8400;
     color: #ffffff;
     font-size: 1rem;
@@ -228,7 +226,7 @@ a img {
 }
 
 .topicAB {
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     font-weight: 800;
     font-size: 0.9rem;
     color: rgba(0, 0, 0, 0.750);
@@ -241,7 +239,7 @@ a img {
 }
 
 #quote {
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     color: #ffffff;
     font-size: 1.5rem;
     padding: 8rem;
@@ -255,7 +253,7 @@ a img {
 
 .navBarElement {
     color: #26282ad5;
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     font-weight: 600;
 
     margin-left: 0.75rem;
@@ -276,7 +274,7 @@ a img {
 }
 
 .landingPageTitle {
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     font-weight: 500;
     font-size: 3rem;
     color: #ffffff;
@@ -284,7 +282,7 @@ a img {
 }
 
 .subSubTitle {
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     margin-bottom: 1.25rem;
     font-size: 1.5rem;
     color: #FF8400;
@@ -295,7 +293,7 @@ a img {
     font-weight: 900;
     color: rgba(0, 0, 0, 0.750);
     font-size: 2.25rem;
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
 
 }
 
@@ -355,7 +353,7 @@ a img {
     display: inline-block;
     font-size: 0.85rem;
     margin-top: 5%;
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     width: 30%;
     font-weight: 100;
 }
@@ -371,7 +369,7 @@ a img {
 
     font-size: 0.85rem;
 
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     font-weight: 100;
 }
 
@@ -379,7 +377,7 @@ a img {
     background-color: #f5f5f5d3;
     border-radius: 8px;
     padding: 1rem;
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     font-weight: 600;
     font-size: 0.9rem;
     color: rgba(0, 0, 0, 0.750);
@@ -391,7 +389,7 @@ a img {
     /* convert the following tailwind classes to css classes: white fs-l2 md-fs-l2 lh-2 bigText textShadow zilla pl-10*/
     color: #ffffff;
     font-size: 2.5rem;
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     font-weight: 500;
     text-shadow: 2px 8px 6px rgba(0, 0, 0, 0.574), 0px -5px 35px rgba(255, 255, 255, 0.707), -5px 7px 5px rgba(0, 0, 0, 0.483);
     line-height: 3rem;
@@ -404,7 +402,7 @@ a img {
 .footer {
     background-color:#f5f5f5d3;
     color:rgba(0, 0, 0, 0.750);
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     font-weight: 600;
     font-size: 1 rem;
     padding: 1rem;
@@ -458,7 +456,7 @@ a img {
     font-size: 1.5rem;
     font-weight: 500;
     color: whitesmoke;
-    font-family: "Zilla Slab";
+    font-family: 'Zilla Slab', serif;;
     text-align: center;
     margin-left:4px;
     text-shadow: 2px 8px 6px rgba(0, 0, 0, 0.574), 0px -5px 35px rgba(61, 61, 61, 0.707), -5px 7px 5px rgba(0, 0, 0, 0.483);
